# sbagen-alsa

./: .gitignore  .gitmodules  ChangeLog.txt  Makefile  Makefile-old  Makefile.am  Makefile.in  build-libs.sh  config.status  configure.ac  mp3dec.c  oggdec.c  sbagen  sbagen.c
.deps/: sbagen.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
