AC_INIT(sbagen, 1.4.5.1)
AC_CONFIG_SRCDIR(sbagen.c)
AM_INIT_AUTOMAKE

MAD_REQUIRED_VERSION=0.15.0b
OGG_REQUIRED_VERSION=1.3.2
VORBIS_REQUIRED_VERSION=1.2.0
PKG_CHECK_MODULES(MAD, mad >= $MAD_REQUIRED_VERSION)
PKG_CHECK_MODULES(OGG, ogg >= $OGG_REQUIRED_VERSION)
PKG_CHECK_MODULES(VORBIS, vorbisfile >= $VORBIS_REQUIRED_VERSION)
AC_SUBST(AC_CFLAGS)
AC_SUBST(AC_CXXFLAGS)
AC_SUBST(AC_LIBS)

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX

AC_OUTPUT(Makefile)
